--- a/web/css/default.css
+++ b/web/css/default.css
@@ -39,16 +39,20 @@
     margin-top: -53px;
 }
 
-#browserhack-status {
-    float: left;
-    left: 0;
-    right: 250px;
-    bottom: 0;
+#game-content {
+    height: 100%;
+}
+
+#status-content {
+    width: 400px;
+    float: right;
+    height: 100%;
     background-color: #283654;
-    padding-left: 0.5em;
-    padding-right: 0.5em;
-    width: fit-content;
-    white-space: pre;
+}
+
+#browserhack-status {
+    display: grid;
+    white-space: normal;
 }
 
 #tile-content {
@@ -90,7 +94,8 @@
 }
 
 #browserhack-status .status-misc {
-    margin-left: 20px;
+    margin-left: 10px;
+    margin-right: 10px;
     font-size: 16pt;
     vertical-align: middle;
 }
@@ -267,16 +272,15 @@
 }
 
 #message-content {
-    position: fixed;
+    /*position: fixed;*/
     /*bottom: 0;*/
+    overflow-y:auto;
+    height: 100px;
     top: 0;
-    right: 0;
-    padding-bottom: 10px;
+    padding-bottom: 5px;
 }
 
 body {
-    padding-top: 80px;
-    padding-bottom: 20px;
     position: absolute;
     top: 0;
     bottom: 0;
@@ -356,8 +360,8 @@ body {
     background: rgba(0, 0, 0, 0.85);
     width: 400px;
     position: fixed;
-    bottom: 20px;
-    left: 20px;
+    bottom: 0px;
+    right: 0px;
 
     color: #A2A2A2;
 
