fix mobile spectator mode view bug

--- a/web/css/default.css
+++ b/web/css/default.css
@@ -822,7 +822,7 @@ padding-right: 30%;*/
         font-size:20px;
     }
     .text-popup-content {
-        font-size: 13pt;
+        font-size: small;
     }
 }
 
