--- a/web/css/default.css
+++ b/web/css/default.css
@@ -804,6 +804,7 @@ padding-right: 30%;*/
 
 
 
+
 @media (-webkit-min-device-pixel-ratio: 1) {
     #mobile-chat{
         font-size: 20pt;
@@ -817,13 +818,43 @@ padding-right: 30%;*/
         height: 8vh;
     }
     #mobile-button-ui{
-        font-size: 20px;
+        font-size: 25px;
     }
     #mobile-menu{
         font-size:20px;
     }
     .text-popup-content {
         font-size: small;
+    }
+    .ui-popup-outer{
+        margin:0;
+        max-height: 90vh;
+    }
+}
+
+@media (-webkit-min-device-pixel-ratio: 1) and (min-width: 800px)  {
+    #mobile-chat{
+        font-size: 24pt;
+        height: 5vh;
+    }
+    #mobile-status{
+        font-size: 24pt;
+    }
+    #mobile-message-content {
+        font-size: 24pt;
+        height: 5vh;
+    }
+    .text-popup-content {
+        font-size: 24pt;
+    }
+    #mobile-button-ui{
+        font-size: 32px;
+    }
+    #mobile-menu{
+        font-size:36px;
+    }
+    #mobile-menu canvas{
+        zoom:2;SS
     }
     .ui-popup-outer{
         margin:0;
