fix css mistype

--- a/web/css/default.css
+++ b/web/css/default.css
@@ -656,7 +656,7 @@ padding-right: 30%;*/
     /*margin-left: 1%;*/
 }
 .item-col {
-  
+
 }
 .item-tile{
   max-width: 32px;
@@ -854,7 +854,7 @@ padding-right: 30%;*/
         font-size:36px;
     }
     #mobile-menu canvas{
-        zoom:2;SS
+        zoom:2;
     }
     .ui-popup-outer{
         margin:0;
