fix mobile interface media query

--- a/web/css/default.css
+++ b/web/css/default.css
@@ -881,7 +881,7 @@ padding-right: 30%;*/
         font-size: 24pt;
     }
     #mobile-button-ui{
-        font-size: 26px;
+        font-size: 36px;
     }
     #mobile-menu{
         font-size:36px;
@@ -897,6 +897,9 @@ padding-right: 30%;*/
 @media (-webkit-min-device-pixel-ratio: 2) and (min-height: 1500px) and (orientation:portrait) {
     #mobile-message-content {
         height: 5vh;
+    }
+    #mobile-button-ui{
+        font-size: 26px;
     }
 }
 @media (-webkit-min-device-pixel-ratio: 2) and (min-width: 1280px) and (orientation:portrait) {
